--- a/src/content/blog/pytorcha-cond-where.mdx
+++ b/src/content/blog/pytorcha-cond-where.mdx
@@ -8,12 +8,9 @@ import Note from '../../components/Note.astro';
 > 本文基于 PyTorch2.x 撰写，示例代码可直接复制运行。
 
 ---
-
-这里是正文的一段话，我想在这个位置旁边加个注释。
-<Note type="info" title="旁注">
-  这是一个浮动的旁注，在大屏上会显示在右侧，小屏上显示在下方。
+<Note type="info" title="短路求值">
+短路求值（short-circuit evaluation）指在布尔运算中，一旦结果已提前确定，就略过剩下步骤不再计算的求值策略。  
 </Note>
-继续正文的内容...
 
 ## TLDR 
 
